# kandau-svn

branches/kandau-kde3/: Doxyfile  TODO  configure.in.in  subdirs
branches/kandau-kde3/admin/: cvs.sh
branches/kandau-kde3/examples/books/: Makefile.am
branches/kandau-kde3/src/: collection.h  desktopconfigdbbackend.cpp  dynamicobject.cpp  (+5 more)
tags/kandau-kde3/: AUTHORS  kandau.kdevelop
trunk/: .gitignore  AUTHORS  CMakeLists.txt  Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  TODO  config.h  config.status  configure  configure.in  kandau.kdevelop  libtool  subdirs
trunk/autom4te.cache/: output.0  traces.0
trunk/doc/: Makefile  Makefile.am  Makefile.in
trunk/examples/: Makefile.am
trunk/po/: Makefile
trunk/src/: CMakeLists.txt  Makefile  Makefile.am  Makefile.in  classes.cpp  classes.h  collection.cpp  collection.h  dbbackendiface.cpp  dbbackendiface.h  defaultpropertymetainfo.cpp  defaultpropertymetainfo.h  defs.h  desktopconfigdbbackend.cpp  desktopconfigdbbackend.h  dynamicobject.cpp  dynamicobject.h  inmemorysqldbbackend.cpp  inmemorysqldbbackend.h  labels.cpp  labels.h  labelsmetainfo.cpp  labelsmetainfo.h  manager.cpp  manager.h  notificationhandler.cpp  notificationhandler.h  notifier.cpp  notifier.h  object.cpp  object.h  oidtype.cpp  oidtype.h  seqtype.cpp  seqtype.h  sqldbbackend.cpp  sqldbbackend.h  testbackend.cpp  testbackend.h  tokenizer.cpp  (+3 more)
trunk/src/core/: CMakeLists.txt  classes.cpp  classes.h  collection.cpp  collection.h  dbbackendiface.h  defaultpropertymetainfo.cpp  defaultpropertymetainfo.h  defs.h  desktopconfigdbbackend.cpp  desktopconfigdbbackend.h  dynamicobject.cpp  dynamicobject.h  inmemorysqldbbackend.cpp  inmemorysqldbbackend.h  labelsmetainfo.cpp  labelsmetainfo.h  manager.cpp  manager.h  notificationhandler.h  notifier.cpp  notifier.h  object.cpp  object.h  oidtype.cpp  oidtype.h  property.cpp  property.h  relation.cpp  relation.h  seqtype.cpp  sqldbbackend.cpp  sqldbbackend.h  testbackend.cpp  tokenizer.cpp  tokenizer.h  xmldbbackend.cpp  xmldbbackend.h
trunk/src/core/.deps/: classes.Plo  collection.Plo  dbbackendiface.Plo  defaultpropertymetainfo.Plo  desktopconfigdbbackend.Plo  dynamicobject.Plo  inmemorysqldbbackend.Plo  labelsmetainfo.Plo  manager.Plo  notificationhandler.Plo  notifier.Plo  object.Plo  oidtype.Plo  seqtype.Plo  sqldbbackend.Plo  testbackend.Plo  tokenizer.Plo  xmldbbackend.Plo
trunk/src/examples/: CMakeLists.txt
trunk/src/examples/books/: CMakeLists.txt  main.cpp
trunk/src/examples/books/.deps/: author.Po  book.Po  books.Po
trunk/src/examples/books/stuffs/: author.cpp  author.h  book.cpp  book.h  books.cpp
trunk/src/test/: article.ui  classaa.cpp  classaa.h  classab.cpp  classab.h  classaba.cpp  classaba.h  classb.h  customer.cpp  customer.h  customerorder.h  customerorder.ui  dcopiface.h  dcoptester.cpp  desktopconfigbackendtest.cpp  dynamicobjectstest.h  fastcgitest.cpp  fastcgitest.h  fastcgitester.cpp  inheritancetest.h  inmemorysqlbackendtest.cpp  inmemorysqlbackendtest.h  kunittest.h  listservice.h  metainfotest.cpp  multiplebackendstest.cpp  multiplebackendstest.h  notificationstest.cpp  notificationstest.h  objectaccess.h  qtester.h  sqlbackendtest.cpp  testbackendtest.h  uitester.cpp  xmlbackendtest.h
trunk/src/test/.deps/: article.Po  customer.Po  customerorder.Po  dcopiface_skel.Po  dcoptester.Po  fastcgitest.Po  fastcgitester.Po  listservice.Po  objectaccess.Po  objectaccess.moc.Po  uitester.Po  webtester.Po
trunk/src/test/ajax/: ajax.session  ajax.webprj  alert.js  estil.css  index.html  index.html.4963.backup  kandau.js  list.js  rpcdefs.js
trunk/src/ui/: CMakeLists.txt  collectionmodel.cpp  collectionmodel.h  collectionview.cpp  collectionview.h
trunk/src/ui/.deps/: chooseobjectdialog.Plo  classchooser.Plo  classdialog.Plo  classmainwindow.Plo  collectionchooser.Plo  collectionlistview.Plo  comboboxhandler.Plo  comboboxpropertyhandler.Plo  dialoggenerator.Plo  genericpropertyhandler.Plo  propertywidget.Plo  tablehandler.Plo  uiclassdialog.Plo  uiform.Plo  widgethandler.Plo
trunk/src/ui/stuffs/: chooseobjectdialog.cpp  chooseobjectdialog.h  classchooser.cpp  classdialog.cpp  classdialog.h  classmainwindow.cpp  classmainwindow.h  collectionchooser.h  comboboxhandler.h  comboboxpropertyhandler.cpp  comboboxpropertyhandler.h  genericpropertyhandler.cpp  propertywidget.cpp  tablehandler.cpp  tablehandler.h  uiclassdialog.cpp  uiform.cpp  uiform.h  widgethandler.h
trunk/src/web/: fastcgidevice.h  httpserver.cpp  httpserver.h  jsonparser.cpp  jsonparser.h  jsonrpcserver.cpp  jsonrpcserver.h  kandaufastcgi.cpp  kandaufastcgi.h  kandauservice.h
trunk/src/web/.deps/: fastcgi.Plo  fastcgidevice.Plo  httpserver.Plo  jsonparser.Plo  jsonrpcserver.Plo  kandaufastcgi.Plo  kandauservice.Plo  service.Plo
trunk/test/: Makefile  Makefile.am  Makefile.in  article.cpp  article.h  article.ui  classa.cpp  classa.h  classaba.h  classb.h  customer.cpp  customer.h  customerorder.cpp  customerorder.h  database.xml  dcopiface.h  dcoptester.cpp  document.cpp  document.h  dynamicobjectstest.cpp  dynamicobjectstest.h  inheritancetest.cpp  inmemorysqlbackendtest.cpp  inmemorysqlbackendtest.h  kunittest.cpp  listservice.cpp  metainfotest.cpp  metainfotest.h  multiplebackendstest.cpp  multiplebackendstest.h  notificationstest.h  objectaccess.cpp  objectaccess.h  order.cpp  order.h  qtester.cpp  sqlbackendtest.cpp  sqlbackendtest.h  testbackendtest.cpp  testbackendtest.h  (+5 more)
trunk/ui/: Makefile.am  chooseobjectdialog.cpp  chooseobjectdialog.h  classchooser.cpp  classchooser.h  classdialog.cpp  classdialog.h  classmainwindow.cpp  classmainwindow.h  classselector.cpp  classselector.h  collectionchooser.cpp  collectionchooser.h  collectionlistview.cpp  collectionlistview.h  comboboxhandler.cpp  comboboxhandler.h  comboboxpropertyhandler.cpp  comboboxpropertyhandler.h  dialoggenerator.cpp  dialoggenerator.h  genericpropertyhandler.h  propertywidget.cpp  propertywidget.h  uiclassdialog.h  uiform.cpp  uiform.h  widgethandler.cpp  widgethandler.h
trunk/web/: Makefile  Makefile.am  Makefile.in  service.cpp
(+71 files in other folders)
